[package]
name = "zeus-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["macros", "rt", "signal", "time"]}
tokio-util = { version = "0.7.15", default-features = false, features = ["rt"] } 
tokio-rustls = { version = "0.26.2", default-features = false}
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive", "default"]}
rumqttc = "0.24.0"
thiserror = "2.0.12"
bytes = "1.10.1"
tokio-serial = { version = "5.4.5", features = ["bytes"]} 
itertools = "0.14.0"
typetag = "0.2.20"
serde_json = "1.0.140"
